tests/rosetta/transpiler/Pascal/almkvist-giullera-formula-for-pi.error
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /workspace/mochi/tests/rosetta/transpiler/Pascal/almkvist-giullera-formula-for-pi.pas
almkvist-giullera-formula-for-pi.pas(51,10) Fatal: Syntax error, "identifier" expected but "REPEAT" found
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
